JDK Base64 update.